--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1 class="main-heading">RGB</h1>
       <img class="town-preview" src="https://i.imgur.com/IwQjp91.png1"/>
     </header>
-
+    <!-- Comment -->
     <main class="primary-main">
       <section class="store-section">
         <img class="building" src="https://i.imgur.com/h8rzuZQ.jpg" />
@@ -20,7 +20,7 @@
       </section>
 
       <section class="store-section">
-        <img class="building" src="https://i.imgur.com/j96ZcKF.jpg"/&gt;
+        <img class="building" src="https://i.imgur.com/j96ZcKF.jpg"/>
         <div class="store-details">
           <h2 class="category-heading">Green</h2>
         </div>
