updated page #3(added colors and changed the name)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <footer class="primary-footer">
       <p class="created-by">
         <a href="refer.html">More colors</a>
+        <a href="page3.html">Go to page #3</a>
       </p>
     </footer>
   </body>
