--- a/refer.html
+++ b/refer.html
@@ -37,6 +37,7 @@
     <footer class="primary-footer">
       <p class="created-by">
         <a href="index.html">Go back to rgb</a>
+        <a href="page3.html">Go to page #3</a>
       </p>
     </footer>
   </body>
