added my github to every page footer

--- a/page3.html
+++ b/page3.html
@@ -38,6 +38,7 @@
       <p class="created-by">
         <a href="index.html">Go back to rgb</a>
         <a href="refer.html">Go back to more colors</a>
+        <a href="https://github.com/crikbb">My GitHub!!!</a>
       </p>
     </footer>
   </body>
