--- a/refer.html
+++ b/refer.html
@@ -38,6 +38,7 @@
       <p class="created-by">
         <a href="index.html">Go back to rgb</a>
         <a href="page3.html">Go to page #3</a>
+        <a href="https://github.com/crikbb">My GitHub!!!</a>
       </p>
     </footer>
   </body>
